/**
 * COMPONENTE: EL SERVICIO INCOMPATIBLE (Punto 2 y 4 del resumen)
 * Biblioteca de terceros que realiza análisis avanzados pero SOLO acepta JSON.
 */
export class BibliotecaAnalisisTerceros {
    // Este método es incompatible con nuestra aplicación nativa de XML
    public realizarAnalisisAvanzado(datosJSON: string): string {
        console.log(`   [Servicio Externo] Leyendo JSON para análisis predictivo...`);
        // Simulación de procesamiento interno
        return `{ "tendencia": "ALTA", "confianza": "94%" }`;
    }
}